--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,5 @@
 {
   "dependencies": {
-    "com.unity.ads": "4.4.1",
     "com.unity.analytics": "3.6.12",
     "com.unity.collab-proxy": "2.0.1",
     "com.unity.feature.development": "1.0.1",
@@ -9,6 +8,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.purchasing": "4.6.0",
     "com.unity.render-pipelines.high-definition": "12.1.10",
+    "com.unity.services.mediation": "1.0.5",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
